fixed overflow for body when opening modal

--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -110,7 +110,6 @@ body {
     padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0) env(safe-area-inset-bottom, 0)
         env(safe-area-inset-left, 0);
     overflow-x: hidden !important;
-    overflow-y: auto !important;
     padding-right: 0 !important;
 }
 ol,
